modules/cluster/addons/aws-alb-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - args:
        - --cluster-name=${cluster_name}
        env: null
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.9
        name: alb-ingress-controller
      serviceAccountName: alb-ingress-controller
