modules/cluster/addons/metrics-server.yaml
---
# Source: metrics-server/templates/metric-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    app: metrics-server
    chart: metrics-server-2.11.1
    release: metrics-server
  annotations:
    {}
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: metrics-server
    release: metrics-server
  type: ClusterIP
---
# Source: metrics-server/templates/metrics-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    app: metrics-server
    chart: metrics-server-2.11.1
    release: metrics-server
spec:
  selector:
    matchLabels:
      app: metrics-server
      release: metrics-server
  replicas: 1
  template:
    metadata:
      labels:
        app: metrics-server
        release: metrics-server
    spec:
      serviceAccountName: metrics-server
      containers:
        - command:
          - /pod_nanny
          - --cpu=40m
          - --extra-cpu=0.5m
          - --memory=40Mi
          - --extra-memory=4Mi
          - --threshold=5
          - --deployment=metrics-server
          - --container=metrics-server
          - --poll-period=300000
          - --estimator=exponential
          - --minClusterSize=3
          image: k8s.gcr.io/addon-resizer:1.8.8
          name: metrics-server-nanny
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 5m
              memory: 50Mi
        - name: metrics-server
          image: "k8s.gcr.io/metrics-server-amd64:v0.3.6"
          imagePullPolicy: IfNotPresent
          command:
            - /metrics-server
            - --cert-dir=/tmp
            - --logtostderr
            - --secure-port=8443
          ports:
          - containerPort: 8443
            name: https
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
          - name: tmp
            mountPath: /tmp
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
      volumes:
      - name: tmp
        emptyDir: {}
