modules/cluster/addons/prometheus-node-exporter.yaml
---
# Source: prometheus-node-exporter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-node-exporter
  namespace: kube-system
  annotations:
    prometheus.io/scrape: "true"
  labels:     
    app: prometheus-node-exporter
    release: prometheus-node-exporter
spec:
  type: ClusterIP
  ports:
    - port: 9100
      targetPort: 9100
      protocol: TCP
      name: metrics
  selector:
    app: prometheus-node-exporter
    release: prometheus-node-exporter
---
# Source: prometheus-node-exporter/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus-node-exporter
  namespace: kube-system
  labels:     
    app: prometheus-node-exporter
    release: prometheus-node-exporter
spec:
  selector:
    matchLabels:
      app: prometheus-node-exporter
      release: prometheus-node-exporter
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:         
        app: prometheus-node-exporter
        release: prometheus-node-exporter
    spec:
      serviceAccountName: prometheus-node-exporter
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      containers:
        - name: node-exporter
          image: "prom/node-exporter:v0.18.1"
          imagePullPolicy: IfNotPresent
          args:
            - --collector.filesystem.ignored-mount-points=^/(dev|var/lib/docker|proc|sys|var/lib/kubelet)($|/)
            - --path.rootfs=/host
            - --web.listen-address=$(HOST_IP):9100
          ports:
            - name: metrics
              containerPort: 9100
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: metrics
          readinessProbe:
            httpGet:
              path: /
              port: metrics
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 32m
          volumeMounts:
            - name: host
              mountPath: /host
              readOnly:  true
              mountPropagation: HostToContainer
      hostNetwork: true
      hostPID: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
      volumes:
        - name: host
          hostPath:
            path: /
